# mazecast

./: .gitignore  CMakeLists.txt  README.md
docs/: Doxyfile
include/: defines.h  game.h  input.h  player.h  utils.h
src/: game.c  input.c  main.c  player.c  utils.c
